Fixed #219 Checkbox icons appear the wrong color when checkbox imported before icons

--- a/src/checkbox/skin.css
+++ b/src/checkbox/skin.css
@@ -14,11 +14,6 @@ governing permissions and limitations under the License.
   color: var(--spectrum-checkbox-text-color);
 }
 
-.spectrum-Checkbox-checkmark,
-.spectrum-Checkbox-partialCheckmark {
-  color: var(--spectrum-checkbox-checkmark-color);
-}
-
 .spectrum-Checkbox-box {
   border-color: var(--spectrum-checkbox-box-border-color);
   background-color: var(--spectrum-checkbox-box-background-color);
@@ -72,6 +67,11 @@ governing permissions and limitations under the License.
       color: var(--spectrum-checkbox-text-color-down);
     }
   }
+}
+
+.spectrum-Checkbox .spectrum-Checkbox-checkmark,
+.spectrum-Checkbox .spectrum-Checkbox-partialCheckmark {
+  color: var(--spectrum-checkbox-checkmark-color);
 }
 
 .spectrum-Checkbox-input {
